--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
           <!--Apps images-->
           <ul class="portfolio-list">
             <li class="portfolio-content">
-              <a href="www." class="link">
+              <a href="www." class="portfolio-links">
                 <img
                   src="./images/onlinebanking.jpg"
                   alt="bankingapp"
@@ -94,7 +94,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="link">
+              <a href="www." class="portfolio-links">
                 <img
                   src="./images/cardpayment.jpg"
                   alt="cardpayment"
@@ -107,7 +107,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="link">
+              <a href="www." class="portfolio-links">
                 <img
                   src="./images/computerapp.jpg"
                   alt="meditationapp"
@@ -120,7 +120,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="link">
+              <a href="www." class="portfolio-links">
                 <img
                   src="./images/dropoffservice.jpg"
                   alt="driverjob"
@@ -133,7 +133,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="link">
+              <a href="www." class="portfolio-links">
                 <img
                   src="./images/phonewallpapers.jpg"
                   alt="honeimages"
@@ -146,7 +146,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="link">
+              <a href="www." class="portfolio-links">
                 <img
                   src="./images/onlinecourses.jpg"
                   alt="onlinelearning"
@@ -159,7 +159,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="link">
+              <a href="www." class="portfolio-links">
                 <img
                   src="./images/instagramideas.jpg"
                   alt="socialmediacontent"
@@ -172,7 +172,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="link">
+              <a href="www." class="portfolio-links">
                 <img
                   src="./images/organicfood.jpg"
                   alt="healthyfood"
@@ -185,7 +185,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="link">
+              <a href="www." class="portfolio-links">
                 <img
                   src="./images/barista.jpg"
                   alt="pouringcoffe"
@@ -203,14 +203,16 @@
     </main>
     <!--Contacts-->
     <footer class="footer-section">
-      <div class="container">
-        <a class="footer-logo logo link" href="./index.html"
-          >Web<span class="footer-logo">Studio</span></a
-        >
-        <p class="promote-site">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-container container">
+        <div class="first-part">
+          <a class="footer-logo logo link" href="./index.html"
+            >Web<span class="footer-logo">Studio</span></a
+          >
+          <p class="promote-site">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
         <div class="footer-social-media">
           <p class="second-paragraph">Social media</p>
           <ul class="footer-social-media-list">
@@ -221,21 +223,21 @@
                 </svg>
               </a>
             </li>
-            <li class="footer-social-media-list">
+            <li class="footer-social-media-icon">
               <a class="footer-social-media-links" href="">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#twitter" />
                 </svg>
               </a>
             </li>
-            <li class="footer-social-media-list">
+            <li class="footer-social-media-icon">
               <a class="footer-social-media-links" href="">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#facebook" />
                 </svg>
               </a>
             </li>
-            <li class="footer-social-media-list">
+            <li class="footer-social-media-icon">
               <a class="footer-social-media-links" href="">
                 <svg class="footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#linkedin" />
