--- a/index.html
+++ b/index.html
@@ -155,174 +155,172 @@
       <section class="forth-section">
         <div class="container">
           <h2 class="titles">Our Team</h2>
-          <div class="list">
-            <ul>
-              <li class="forth-section-images">
-                <img
-                  src="./images/markguerrero.jpg"
-                  alt="Mark Guerrero"
-                  width="264"
-                />
-                <div class="team-details">
-                  <h3 class="subtitles">Mark Guerrero</h3>
-                  <p class="paragraph-subtitles">Product Designer</p>
-                  <ul class="team-social-media-list">
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#instagram" />
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#twitter" />
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#facebook" />
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#linkedin" />
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <a class="link" href="www."> </a>
-              </li>
-              <li class="forth-section-images">
-                <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
-                <div class="team-details">
-                  <h3 class="subtitles">Tom Ford</h3>
-                  <p class="paragraph-subtitles">Frontend Developer</p>
-                  <ul class="team-social-media-list">
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#instagram" />
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#twitter" />
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#facebook" />
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#linkedin" />
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <a class="link" href="www."> </a>
-              </li>
-              <li class="forth-section-images">
-                <img
-                  src="./images/camilagarcia.jpg"
-                  alt="Camila Garcia"
-                  width="264"
-                />
-                <div class="team-details">
-                  <h3 class="subtitles">Camila Garcia</h3>
-                  <p class="paragraph-subtitles">Marketing</p>
-                  <ul class="team-social-media-list">
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#instagram" />
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#twitter" />
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#facebook" />
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#linkedin" />
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <a class="link" href="www."> </a>
-              </li>
-              <li class="forth-section-images">
-                <img
-                  src="./images/danielwilson.jpg"
-                  alt="Daniel Wilson"
-                  width="264"
-                />
-                <div class="team-details">
-                  <h3 class="subtitles">Daniel Wilson</h3>
-                  <p class="paragraph-subtitles">UI Designer</p>
-                  <ul class="team-social-media-list">
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#instagram" />
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#twitter" />
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#facebook" />
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-social-media-icon">
-                      <a class="social-media-links" href="">
-                        <svg class="social-media-icon" width="16" height="16">
-                          <use href="./images/icons.svg#linkedin" />
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <a class="link" href="www."> </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="list">
+            <li class="forth-section-images">
+              <img
+                src="./images/markguerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <div class="team-details">
+                <h3 class="subtitles">Mark Guerrero</h3>
+                <p class="paragraph-subtitles">Product Designer</p>
+                <ul class="team-social-media-list">
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin" />
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <a class="link" href="www."> </a>
+            </li>
+            <li class="forth-section-images">
+              <img src="./images/tomford.jpg" alt="Tom Ford" width="264" />
+              <div class="team-details">
+                <h3 class="subtitles">Tom Ford</h3>
+                <p class="paragraph-subtitles">Frontend Developer</p>
+                <ul class="team-social-media-list">
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin" />
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <a class="link" href="www."> </a>
+            </li>
+            <li class="forth-section-images">
+              <img
+                src="./images/camilagarcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <div class="team-details">
+                <h3 class="subtitles">Camila Garcia</h3>
+                <p class="paragraph-subtitles">Marketing</p>
+                <ul class="team-social-media-list">
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin" />
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <a class="link" href="www."> </a>
+            </li>
+            <li class="forth-section-images">
+              <img
+                src="./images/danielwilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <div class="team-details">
+                <h3 class="subtitles">Daniel Wilson</h3>
+                <p class="paragraph-subtitles">UI Designer</p>
+                <ul class="team-social-media-list">
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook" />
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-media-icon">
+                    <a class="social-media-links" href="">
+                      <svg class="social-media-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin" />
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <a class="link" href="www."> </a>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="fifth-section">
