--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
           <!--Apps images-->
           <ul class="portfolio-list">
             <li class="portfolio-content">
-              <a href="www." class="portfolio-links">
+              <a class="portfolio-links" href="www.">
                 <img
                   src="./images/onlinebanking.jpg"
                   alt="bankingapp"
@@ -94,7 +94,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="portfolio-links">
+              <a class="portfolio-links" href="www.">
                 <img
                   src="./images/cardpayment.jpg"
                   alt="cardpayment"
@@ -107,7 +107,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="portfolio-links">
+              <a class="portfolio-links" href="www.">
                 <img
                   src="./images/computerapp.jpg"
                   alt="meditationapp"
@@ -120,7 +120,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="portfolio-links">
+              <a class="portfolio-links" href="www.">
                 <img
                   src="./images/dropoffservice.jpg"
                   alt="driverjob"
@@ -133,7 +133,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="portfolio-links">
+              <a class="portfolio-links" href="www.">
                 <img
                   src="./images/phonewallpapers.jpg"
                   alt="honeimages"
@@ -146,7 +146,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="portfolio-links">
+              <a class="portfolio-links" href="www.">
                 <img
                   src="./images/onlinecourses.jpg"
                   alt="onlinelearning"
@@ -159,7 +159,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="portfolio-links">
+              <a class="portfolio-links" href="www.">
                 <img
                   src="./images/instagramideas.jpg"
                   alt="socialmediacontent"
@@ -172,7 +172,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="portfolio-links">
+              <a class="portfolio-links" href="www.">
                 <img
                   src="./images/organicfood.jpg"
                   alt="healthyfood"
@@ -185,7 +185,7 @@
               </a>
             </li>
             <li class="portfolio-content">
-              <a href="www." class="portfolio-links">
+              <a class="portfolio-links" href="www.">
                 <img
                   src="./images/barista.jpg"
                   alt="pouringcoffe"
