--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li class-="list-elements">
               <div class="icons-svg">
                 <svg class="icon-svg" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#antenna" />
+                  <use href="./images/icons.svg#antenna" />
                 </svg>
               </div>
               <h3 class="second-section-titles">Strategy</h3>
@@ -84,7 +84,7 @@
             <li class-="list-elements">
               <div class="icons-svg">
                 <svg class="icon-svg" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#clock" />
+                  <use href="./images/icons.svg#clock" />
                 </svg>
               </div>
               <h3 class="second-section-titles">Punctuality</h3>
@@ -96,7 +96,7 @@
             <li class-="list-elements">
               <div class="icons-svg">
                 <svg class="icon-svg" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#diagram" />
+                  <use href="./images/icons.svg#diagram" />
                 </svg>
               </div>
               <h3 class="second-section-titles">Diligence</h3>
@@ -108,7 +108,7 @@
             <li class-="list-elements">
               <div class="icons-svg">
                 <svg class="icon-svg" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#astronaut" />
+                  <use href="./images/icons.svg#astronaut" />
                 </svg>
               </div>
               <h3 class="second-section-titles">Technologies</h3>
@@ -351,15 +351,8 @@
             <li class="customers-element">
               <a class="customers-link">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#vector-customers-one" />
+                  <use href="./images/icons.svg#customers-logo-four" />
                 </svg>
-                <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#vector-customers-two" />
-                </svg>
-                <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#vector-customers-three" />
-                </svg>
-                <p class="vector-paragraph">FOSTER PETERS</p>
               </a>
             </li>
             <li class="customers-element">
