--- a/index.html
+++ b/index.html
@@ -328,42 +328,42 @@
           <h2 class="titles">Customers</h2>
           <ul class="customers-content">
             <li class="customers-element">
-              <a class="customers-link">
+              <a href="" class="customers-link">
                 <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#customers-logo-one" />
                 </svg>
               </a>
             </li>
             <li class="customers-element">
-              <a class="customers-link">
+              <a href="" class="customers-link">
                 <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#customers-logo-two" />
                 </svg>
               </a>
             </li>
             <li class="customers-element">
-              <a class="customers-link">
+              <a href="" class="customers-link">
                 <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#customers-logo-three" />
                 </svg>
               </a>
             </li>
             <li class="customers-element">
-              <a class="customers-link">
+              <a href="" class="customers-link">
                 <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#customers-logo-four" />
                 </svg>
               </a>
             </li>
             <li class="customers-element">
-              <a class="customers-link">
+              <a href="" class="customers-link">
                 <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#customers-logo-five" />
                 </svg>
               </a>
             </li>
             <li class="customers-element">
-              <a class="customers-link">
+              <a href="" class="customers-link">
                 <svg class="customers-icon" width="104" height="56">
                   <use href="./images/icons.svg#customers-logo-six" />
                 </svg>
